Change API source to Quran.com and EQuran.id, change layout on large to just one column, add arabic font

--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
-/* * {
-	border: 1px solid red;
-} */
+@font-face {
+	font-family: "Amiri Quran Regular";
+	src: url("https://cdn.jsdelivr.net/gh/fawazahmed0/quran-api@1/fonts/amiri-quran-full-org.otf")
+		format("opentype");
+}
 
 body {
 	background-color: #f8f9fa;
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	font-family: "Noto Serif", serif;
 }
 
 code {
