--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 @font-face {
-	font-family: "Amiri Quran Regular";
-	src: url("https://cdn.jsdelivr.net/gh/fawazahmed0/quran-api@1/fonts/amiri-quran-full-org.otf")
-		format("opentype");
+	font-family: 'Amiri Quran Regular';
+	src: url('https://cdn.jsdelivr.net/gh/fawazahmed0/quran-api@1/fonts/amiri-quran-full-org.otf')
+		format('opentype');
 }
 
 body {
@@ -13,11 +13,11 @@ body {
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	font-family: "Noto Serif", serif;
+	font-family: 'Noto Serif', serif;
 }
 
 code {
-	font-family: "Courier New", monospace;
+	font-family: 'Courier New', monospace;
 }
 
 h1,
@@ -58,11 +58,11 @@ p {
 }
 
 .sidebar {
-	@apply fixed top-0 left-0 w-24 p-4 flex h-screen flex-col border-r bg-white space-y-2 transition duration-300 ease-in-out;
+	@apply fixed top-0 left-0 w-16 p-4 flex h-screen flex-col border-r bg-white transition duration-300 ease-in-out;
 }
 
 .sidebar-pos {
-	@apply p-4 cursor-pointer;
+	@apply py-3 cursor-pointer;
 }
 
 .sidebar-pos span {
@@ -70,7 +70,7 @@ p {
 }
 
 .sidebar--open {
-	@apply w-[300px] px-4 transition duration-300 ease-in-out;
+	@apply w-48 px-4 transition duration-300 ease-in-out;
 }
 
 .sidebar--open .sidebar-pos span {
